--- a/public/index.html
+++ b/public/index.html
@@ -4,29 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quinta Entrega</title>
+    <title>Frontend</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="formulario">
-    <form>
+    <div class="formulario" >
+        <form action="/api/productos" method="POST">
             <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Titulo</label>
-                <input type="name" class="form-control" id="title" aria-describedby="Title">
+              <label for="title" class="form-label">Titulo</label>
+              <input type="name" class="form-control" name="title" id="title">
+            </div>
+            <div class="mb-3">
+              <label for="price" class="form-label">Precio</label>
+              <input type="number" class="form-control" name="price" id="price">
+            </div>
+            <div class="mb-3">
+                <label for="thumbnail" class="form-label">Foto</label>
+                <input type="name" class="form-control" name="thumbnail" id="thumbnail">
               </div>
-              <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Precio</label>
-                <input type="number" class="form-control" id="price">
-              </div>
-              <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Foto</label>
-                <input type="name" class="form-control" id="thumbnail">
-              </div>
-              <button type="submit" class="btn btn-primary Subir" onclick="Upload(document.getElementById('title').value, document.getElementById('price').value, document.getElementById('thumnail').value)">Subir</button>
+            <button type="submit" class="btn btn-primary">Agregar</button>
+            <form action="/api/productos" method="GET">
+                <button type="submit" class="btn btn-primary">Mostrar</button>
             </form>
-        </div>
+          </form>
+    </div>
+    
 </body>
-<script src="./server.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
 </html>
