--- a/public/index.html
+++ b/public/index.html
@@ -18,12 +18,24 @@
               <input type="name" class="form-control" name="title" id="title">
             </div>
             <div class="mb-3">
+              <label for="title" class="form-label">Descripcion</label>
+              <input type="name" class="form-control" name="description" id="description">
+            </div>
+            <div class="mb-3">
+              <label for="title" class="form-label">Codigo</label>
+              <input type="name" class="form-control" name="code" id="code">
+            </div>
+            <div class="mb-3">
               <label for="price" class="form-label">Precio</label>
               <input type="number" class="form-control" name="price" id="price">
             </div>
             <div class="mb-3">
                 <label for="thumbnail" class="form-label">Foto</label>
                 <input type="name" class="form-control" name="thumbnail" id="thumbnail">
+              </div>
+              <div class="mb-3">
+                <label for="thumbnail" class="form-label">Stock</label>
+                <input type="number" class="form-control" name="stock" id="stock">
               </div>
               <div style="display: flex; flex-direction: row;">
                 <button type="submit" class="btn btn-primary" id="Agregar">Agregar</button>
