using faker for prods and normaliztion for msj

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,19 @@
       <div class="input-group mb-3 chat">  
         <h2>Chat</h2>
         <div>
-          <input type="text" class="form-control" id="email" placeholder="Email" aria-describedby="basic-addon1">
+          <input type="text" class="form-control" id="nombre" placeholder="Nombre" aria-describedby="basic-addon1">
+        </div>
+        <div>
+          <input type="text" class="form-control" id="apellido" placeholder="apellido" aria-describedby="basic-addon1">
+        </div>
+        <div>
+          <input type="text" class="form-control" id="edad" placeholder="edad" aria-describedby="basic-addon1">
+        </div>
+        <div>
+          <input type="text" class="form-control" id="alias" placeholder="alias" aria-describedby="basic-addon1">
+        </div>
+        <div>
+          <input type="text" class="form-control" id="avatar" placeholder="avatar" aria-describedby="basic-addon1">
         </div>
         <div>
           <input type="text" class="form-control" id="mensaje" placeholder="Mensaje" aria-describedby="basic-addon1">
